<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_play"
    android:theme="@style/Theme.Design.Light.NoActionBar"
    tools:context=".WordPlayQuestion">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="188dp"
        android:layout_height="143dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewWordScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:background="@color/velvetBlue"
        android:text="Score: 5"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewWordLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/velvetBlue"
        android:textColor="@color/white"
        android:text="@string/level"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWordScore" />


    <TextView
        android:id="@+id/textViewWordCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:background="@color/velvetBlue"
        android:text="00:30"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWordQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="336dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/questionW"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/rbGroupWordPlay"
        android:layout_width="350dp"
        android:layout_height="180dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="384dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbWordPlay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_margin="3dp"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:elevation="4dp"
            android:gravity="center"
            android:padding="16dp"
            android:textColor="@drawable/text_color"
            android:text="@string/op1"
            />

        <RadioButton
            android:id="@+id/rbWordPlay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:elevation="4dp"
            android:gravity="center"
            android:padding="16dp"
            android:textSize="15sp"
            android:textColor="@drawable/text_color"
            android:text="@string/op2"
            />

        <RadioButton
            android:id="@+id/rbWordPlay3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_margin="3dp"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:elevation="4dp"
            android:gravity="center"
            android:padding="16dp"
            android:textColor="@drawable/text_color"
            android:text="@string/op3"
            />

    </RadioGroup>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewWordPlayConfirm"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        app:cardBackgroundColor="@color/bistre"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbGroupWordPlay">

        <Button
            android:id="@+id/bConfirmWordPlay"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/cardViewWordPlayConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBackWordPlay"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        app:cardBackgroundColor="@color/bistre"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewWordPlayConfirm">

        <Button
            android:id="@+id/buttonBackWordPlay"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSkipWordPlay"
        android:layout_width="202dp"
        android:layout_height="50dp"
        android:layout_marginTop="216dp"
        app:cardBackgroundColor="@color/bistre"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bSkipWordPlay"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:textAllCaps="false"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardViewSkipPassagePlay"
            app:layout_constraintEnd_toEndOf="@+id/cardViewSkipPassagePlay"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardViewSkipPassagePlay"
            app:layout_constraintTop_toTopOf="@+id/cardViewSkipPassagePlay"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewWordPlayExit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        app:cardBackgroundColor="@color/burgundy"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonWordPlayExit"
            android:layout_width="39dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:textAllCaps="true"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="337dp"
            tools:layout_editor_absoluteY="31dp" />
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>