<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_play"
    android:theme="@android:style/Theme.Wallpaper.NoTitleBar"
    tools:context=".GameOver">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="188dp"
        android:layout_height="143dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:id="@+id/textViewGameOver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="25dp"
        android:layout_marginTop="336dp"
        android:fontFamily="@font/press_start_2p"
        android:gravity="center"
        android:text="@string/gameOver"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />







    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBackGameOver"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="512dp"
        app:cardBackgroundColor="@color/bistre"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonBackGameOver"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>




    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGameOverExit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        app:cardBackgroundColor="@color/burgundy"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonExitGameOver"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:text="@string/exit"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="337dp"
            tools:layout_editor_absoluteY="31dp" />
    </androidx.cardview.widget.CardView>






</androidx.constraintlayout.widget.ConstraintLayout>